# LevityDash

./: .editorconfig  .gitignore  .gitmodules  LICENSE.txt  Pipfile  README.md  _sidebar.md  config-example.ini  config.ini  levity.py  main.py  main.ui  playground.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: build-to-app.yaml  codeql-analysis.yml
build-to-app/: .gitignore  build.py  entitlements.plist  linux.spec  macOS.spec  windows.spec
build-to-app/scripts/: macos_postprocess.sh
build-to-app/specs/: linux.spec  macOS.spec  windows.spec
classes/: backgroundData.py  config.py  constants.py  current.py  display.py  forecast.py  general.py  loader.py  loudWidget.py  playground.py  realtime.py
classes/units/: __init__.py  _unit.py
classes/units/errors/: __init__.py
classes/units/heat/: _celcius.py  _fahrenheit.py  _heat.py  _kelvin.py
classes/units/length/: _imperial.py  _length.py  _metric.py
classes/units/pressure/: __init__.py  _metric.py  _pressure.py
classes/units/time/: __init__.py  _si.py  _time.py
docs/: CNAME  README.md  _footer.md  _sidebar.md  about.md  common-issues.md  config.md  configuring.md  coverpage.html  dashboard.md  development.md  getting-started.md  index.html  index.md  installing.md  issues.md  modules.md  package.json  plugin_config.md  plugins.md  quick-start.md  requirements.md  running.md  style.css
docs/_fonts/jellee/: SIL Open Font License.txt
docs/_fonts/national-park/: webfont.css  webfont_base64.css
docs/_images/: screenshot.avif  screenshotTransparent.avif
docs/_scripts/: simple-footer.js
docs/about/: modules.md  other-features.md  plugins.md
docs/config/: _sidebar.md  app.md  config.md  dashboard.md  plugins.md
docs/config/plugins/: Govee.md  OpenMeteo.md  WeatherFlow.md
docs/development/: building.md  changelogs.md  issues.md
docs/development/changelogs/: v0.2.0.md
docs/getting-started/: _sidebar.md
docs/install/: index.html
docs/modules/: _sidebar.md
docs/plugins/: _sidebar.md
docs/social-posts/: weather-flow-community-v0.2.0.md
example-config/: config.ini
example-config/plugins/: WeatherFlow.ini  plugins.ini
example-config/plugins/Govee/: config.ini
example-config/templates/dashboards/: defaultOM.levity  defaultWF.levity  empty.levity
example-config/templates/panels/: Clock.levityPanel
plugins/api/: __init__.py
plugins/pysmartweatherudp/: __init__.py  constants.py
src/: EasyPath.py  GridView.py  __init__.py  _config.py  _easyDict.py  catagories.py  colorLog.py  colors.py  config.py  constants.py  dispatcher.py  display.py  fonts.py  general.py  logger.py  realtime.py  storage.json  unused.py  utils.py
src/Geometry/: __init__.py  utils.py
src/Geometry/Grid/: __init__.py
src/LevityDash/: __init__.py  __main__.py
src/LevityDash/example-config/: config.ini
src/LevityDash/example-config/plugins/: WeatherFlow.ini
src/LevityDash/lib/: EasyPath.py  __init__.py  config.py  log.py  stateful.py
src/LevityDash/lib/Geometry/: __init__.py  utils.py
src/LevityDash/lib/plugins/: __init__.py  categories.py  dispatcher.py  errors.py  observation.py  plugin.py  utils.py
src/LevityDash/lib/ui/: __init__.py  colors.py  fonts.py  icon.icns  icons.py
src/LevityDash/lib/utils/: __init__.py  data.py  geometry.py  log.py  shared.py  various.py
src/LevityDash/resources/: levity-dashboard.service
src/LevityDash/resources/example-config/: config.ini
src/LevityDash/shims/: __init__.py  _datetime_shim.py
src/Modules/: CentralPanel.py  Containers.py  DateTime.py  Drawer.py  Guage.py  Label.py  Menus.py  Panel.py  glyphs.py
src/Modules/Containers/: SplitPanel.py
src/Modules/Displays/: Graph.py  Moon.py  Realtime.py  Text.py  __init__.py
src/Modules/Handles/: Figure.py  Grid.py  Incrementer.py  MarginHandles.py  Resize.py  Timeframe.py  Various.py  __init__.py
src/api/: __init__.py  ambientWeather.py  baseAPI.py  errors.py  forecast.py  openmeto.py  solcast.json  solcast.py  weatherFlow.ini  weatherFlow.py
src/api/tomorrowIO/: __init__.py  field.py  fieldParser.py  fields.pickle  tomorrowIO.py
src/grid/: Cell.py  Geometry.py
src/measurments/: __init__.py  _groups.py  _measurment.py
src/observations/: AmbientWeather.py  WeatherFlow.py  __init__.py  _observations.py  ambientWeather.py  environment.py  openmeteo.py  solcast.py  tomorrowIO.py  weatherFlow.py
src/plugins/: __init__.py  ble.py  categories.py  dispatcher.py  observation.py  plugin.py  utils.py
src/plugins/builtin/: Govee.py  OpenMeteo.py  OpenWeatherMap.py
src/plugins/translator/: __init__.py  units.py
src/plugins/web/: __init__.py  rest.py  socket.py
src/translators/: _AmbientWeather.py  _WeatherFlow.py  __init__.py  _translator.py  ambientWeather.py  units.py  weatherFlow.py
src/udp/: _WeatherFlow.py  __init__.py  gui.py  weatherFlow.py
src/ui/: colors.py  fonts.py
src/ui/frontends/: __init__.py
src/units/: __init__.py  _unit.py
src/units/defaults/: __init__.py
src/units/heat/: __init__.py  _celcius.py  _fahrenheit.py  _heat.py  _kelvin.py
src/units/length/: __init__.py  _imperial.py  _length.py  _metric.py
src/units/others/: __init__.py  _concentration.py  _light.py  various.py
src/units/pressure/: _imperial.py  _metric.py  _pressure.py
src/units/rate/: __init__.py  _precipitation.py  _rate.py  _wind.py
src/units/time/: _si.py  _time.py
src/utils/: __init__.py  data.py  geometry.py  log.py  shared.py
styles/: main.qss
ui/: Complication.ui  ComplicationCluster.ui  ComplicationCluster_UI.py  Complication_UI.py  GlyphBox.ui  GlyphBox_UI.py  Temperature.ui  Temperature_UI.py  colors.py  conditions.ui  conditions_UI.py  main.ui  main_UI.py  rain.ui  rain_UI.py  test.ui  test_UI.py  wind.ui  wind_UI.py
widgets/: Complication.py  ComplicationArray.py  ComplicationCluster.py  DragDropWindow.py  DummyWidget.py  DynamicLabel.py  GlyphBox.py  Graph.py  GridView.py  Guage.py  LargeComplication.py  Proto.py  Rain.py  Status.py  Submodule.py  Temperature.py  WidgetBox.py  Wind.py  WindRose.py  grip.py  loudWidget.py  main_UI.py  moon.py
(+103 files in other folders)
