[tool.poetry]
name = "LevityDash"
authors = ["noblecloud <git@noblecloud.dev>"]
description = "A lightweight, easy to use, desktop native, multi-source, modular dashboard for macOS, Windows and Linux"

version = "0.2.0-beta.1"
readme = "README.md"
license = "MIT"

homepage = "https://levitydash.app"
repository = "https://github.com/noblecloud/LevityDash"

keywords = ["dashboard", "desktop", "app", "weather", "dash"]
classifiers = [
	"Programming Language :: Python :: 3.10",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Natural Language :: English",
	"Development Status :: 4 - Beta",
	"Topic :: Utilities",
	"Topic :: Desktop Environment",
	"Environment :: Plugins",
	"Framework :: AsyncIO",
	"Framework :: aiohttp",
	"Intended Audience :: Developers",
	"Intended Audience :: End Users/Desktop",
	"Intended Audience :: Education",
	"Intended Audience :: Information Technology",
]

include = [
	'src/LevityDash/resources',
	'src/LevityDash/shims/',
]

packages = [
	{ include = 'LevityDash', from = 'src' },
]

[tool.poetry.scripts]
LevityDash = 'LevityDash:__main__.main'
LevityDash-reset-config = 'LevityDash:__main__.reset_config'


[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pylunar = "^0.6.0"
WeatherUnits = "^0.7.1"
numpy = "^1.24.0"
pytz = "^2022.7"
scipy = "^1.9.3"
pysolar = "^0.10"
python-dateutil = "^2.8.2"
bleak = "^0.14.3"
PyYAML = "^6.0"
rich = "^12.6.0"
aiohttp = "^3.8.5"
PySide2 = "^5.15.2.1"
appdirs = "^1.4.4"
tomli = "^2.0.1"
tomli-w = "^1.0.0"
sortedcontainers = "^2.4.0"
dotty-dict = "^1.3.1"
sentry-sdk = { version = "^1.12.1", optional = true, extras = ["aiohttp"] }
logtail-python = { version = "^0.1.3", optional = true }
pyside2 = "^5.15.2.1"
pyinstaller = { version = "^5.7.0", optional = true }

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/noblecloud/LevityDash/issues"
"Documentation" = "https://levitydash.app/#/getting-started"
"Discussions" = "https://github.com/noblecloud/LevityDash/discussions"

[tool.poetry.group.dev.dependencies]
WeatherUnits = { develop = true, path = "../WeatherUnits" }
python-semantic-release = "^7.32.2"

[tool.poetry.group.profiling.dependencies]
memray = "^1.5.0"
heartrate = "^0.2.2"
scalene = "^1.5.16"

[tool.poetry.group.build-to-app.dependencies]
pyinstaller = "^5.7.0"
certifi = "^2022.12.7"

[tool.poetry.group.pycharm.dependencies]
line-profiler-pycharm = "^1.1.0"
pydevd-pycharm = "^222.4459.20"

[tool.poetry.group.monitoring.dependencies]
sentry-sdk = "^1.12.1"
logtail-python = "^0.1.3"

[tool.poetry.extras]
monitoring = ["sentry-sdk", "logtail-python"]
build = ["pyinstaller", "certifi"]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
	"pyproject.toml:version",
	"src/LevityDash/__init__.py:__version__",
]